--- a/src/sass/components/_portfolio.scss
+++ b/src/sass/components/_portfolio.scss
@@ -9,6 +9,9 @@
     position: relative;
     border-radius: 5px;
     overflow: hidden;
+    width: 100%;
+    padding: 1em;
+    margin-bottom: 1em;;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
     &:hover {
       .details {
