Fix theme colors and logo

--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -1,7 +1,7 @@
 // overwrite bootstrap variables
 $theme-colors: (
   'primary': #ffffff,
-  'secondary': #444f5a,
+  'secondary': #97978D,
   'accent': #0564bd
 );
 
