--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -8,8 +8,8 @@ header #header {
     @include font-secondary;
     font-style: italic;
     color: inherit;
-    max-width: 57%;
-    @include media($bp-lg) {
+    max-width: 20%;
+    @include media($bp-xl) {
       max-width: 10%;
     }
 
